Added new analysis endpoint (analyze existing model) + storedDFD to analysisDFD Converter
