# src/main/java/com/tam/api/controller/ModelApiController.java
@@ -20,9 +20,8 @@ import org.springframework.web.bind.annotation.*;
 import javax.validation.Valid;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.function.Function;
+import java.util.UUID;
 
 @EnableAutoConfiguration
 @RestController
@@ -148,6 +147,22 @@ public class ModelApiController implements ModelApi {
         projectRepository.deleteByProjectID(project.getProjectID());
         // Save updated project
         projectRepository.save(project);
+    }
+
+    @Override
+    @CrossOrigin
+    public ResponseEntity<AnalysisResultResource> analyzeStoredThreatModel(String modelID, String authorization){
+        if (modelID == null) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        }
+        // Load given model from database
+        StoredDFDModelResource dfdModelResource = loadModel(modelID, authorization).getBody();
+
+        // Convert StoredDFDModelResource to AnalysisDFDModelResource
+        AnalysisDFDModelResource analysisDfdModelResource = StoredDFDModelResourceToAnalysisDFDModelResourceConverter.convert(dfdModelResource);
+
+        // Call normal analyze function with converted AnalysisDFDModelResource
+        return analyzeThreatModel(authorization, analysisDfdModelResource);
     }
 
     @Override
